# fastapi-saas-starter-kit

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260603_0001_initial.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/core/: config.py  csrf.py  errors.py  logging.py  rate_limit.py  security.py
apps/api/app/core/email/: base.py  console.py  schemas.py
apps/api/app/db/: base.py  session.py
apps/api/app/modules/auth/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/billing/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/modules/invites/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/modules/users/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/workspaces/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/tests/: conftest.py  test_auth.py  test_billing.py  test_constraints.py  test_invites.py  test_security.py  test_workspaces.py
apps/web/: Dockerfile  package.json  proxy.ts  tsconfig.json  vitest.config.mjs
docs/: api.md  architecture.md  deployment.md  security.md
docs/starter-kit/: 00-start-here.md  01-how-to-use-this-starter.md  02-what-to-keep-or-remove.md  03-new-saas-project-checklist.md  DELETE_THIS_FOLDER_AFTER_CUSTOMIZATION.md
scripts/: README.md  verify_redis_rate_limit.py  web-dev-entrypoint.sh
(+49 files in other folders)
