[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-saas-starter-api"
version = "0.1.0"
description = "FastAPI SaaS Starter Kit backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.0",
  "argon2-cffi>=23.1.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "pyjwt>=2.10.0",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.30",
  "sqlmodel>=0.0.24",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["app*"]
